--- a/distros/debian/changelog
+++ b/distros/debian/changelog
@@ -1,3 +1,9 @@
+zoneminder (1.28.1) wheezy; urgency=high
+
+  * Release.  See https://github.com/ZoneMinder/ZoneMinder/releases
+
+ -- Isaac Connor <iconnor@connortechnology.com>  Mon, 16 Feb 2015 14:56:58 -0500
+
 zoneminder (1.28.1-testing) testing; urgency=medium
 
   * UI fixes, security fixes, RTSP fixes, Digest Auth, language fixes and more.
