--- a/distros/debian8/changelog
+++ b/distros/debian8/changelog
@@ -1,3 +1,9 @@
+zoneminder (1.28.1-0) jessie; urgency=medium
+
+  * Upstream release for debian jessie. See https://github.com/ZoneMinder/ZoneMinder/releases
+
+ -- Isaac Connor <iconnor@connortechnology.com>  Tue, 17 Feb 2015 09:23:47 -0500
+
 zoneminder (1.28.0-0.2) testing; urgency=medium
 
   * Non-maintainer upload.
