--- a/distros/ubuntu1204/changelog
+++ b/distros/ubuntu1204/changelog
@@ -1,3 +1,9 @@
+zoneminder (1.28.1-utopic-1) utopic; urgency=medium
+
+  * 
+
+ -- Isaac Connor <iconnor@connortechnology.com>  Tue, 17 Feb 2015 09:48:05 -0500
+
 zoneminder (1.28.1-utopic) utopic; urgency=medium
 
   * Release 1.28.1.  See release notes for details.
